# IntroductionToSoftwareEngineering

./: .gitignore  CMakeLists.txt  README.md
Module 1/: README.md  Sample1.cpp  main.cpp  sample2.cpp
Module 1/Samples/2.Hello_World_V2/: README.md  main.cpp
Module 1/Samples/3.Calculator_V1/: README.md  main.cpp
Module 1/Samples/4.Game_Stats_V1/: README.md  main.cpp
Module 1/Samples/5.Game_Stats_V2/: README.md  main.cpp
Module 1/Samples/6.Game_Stats_V3/: README.md  main.cpp
Module 1/Samples/Hello_World_V1/: README.md  main.cpp
Module 1/Samples/Hello_World_V2/: main.cpp
Module 2/: README.md
Module 2/Samples/1.Score_Rater_V1/: README.md  main.cpp
Module 2/Samples/2.Score_Rater_V2/: README.md  main.cpp
Module 3/: README.md
Module 3/Samples/1.Play_Again_V1/: README.md  main.cpp
Module 3/Samples/2.Play_Again_V2/: README.md  main.cpp
Module 3/Samples/3.Finicky_Counter_V1/: README.md  main.cpp
Module 3/Samples/4.Designers_Network_Program/: README.md  main.cpp
Module 3/Samples/5.Sum_of_Positive_Numbers/: README.md  main.cpp
Module 4/: README.md
Module 4/Samples/1.Counter_Program_V1/: README.md  main.cpp
Module 5/: README.md  main.cpp
Module 5/Samples/1.Instructions/: README.md  main.cpp
Module 5/Samples/2.Yes_or_No/: README.md  main.cpp
Module 5/Samples/3.Scoping/: README.md  main.cpp
Module 7/: README.md
Module 7/Samples/1.Factorial/: main.cpp
Module 7/Samples/2.Fibonacci/: main.cpp
Module 7/Samples/Sample_2/: main.cpp
Module 7/Samples/Sample_2/include/fmt/: ise102.h
Module 8/: in.txt  main.cpp
Tasks/Arrays Introduction/: main.cpp
Tasks/Pointer/: main.cpp
