cmake_minimum_required(VERSION 3.21)
project(IntroductionToSoftwareEngineering)

set(CMAKE_CXX_STANDARD 14)

add_executable(sample_2 "Module 7/Samples/Sample_2/main.cpp")
add_executable(factorial "Module 7/Samples/1.Factorial/main.cpp")
add_executable(fibonacci "Module 7/Samples/2.Fibonacci/main.cpp")
add_executable(assessment_2 "Assessment 2/main.cpp")
add_executable(module_8 "Module 8/main.cpp")
add_executable(emmma "Assessment 2/emma.cpp")